[gd_scene load_steps=5 format=3 uid="uid://bme2m1yladb15"]

[ext_resource type="Script" path="res://Scripts/pickUpSpawnPoints.gd" id="1_37j5r"]
[ext_resource type="PackedScene" uid="uid://beusl0on7jgj" path="res://Scenes/pickUps/bullet_pickup.tscn" id="2_0anvv"]
[ext_resource type="PackedScene" uid="uid://dvttnjslvlsox" path="res://Scenes/pickUps/bouncers_pickup.tscn" id="3_ha8fy"]
[ext_resource type="PackedScene" uid="uid://clx4kf33gwkty" path="res://Scenes/pickUps/death_lasers_pickup.tscn" id="4_50dyv"]

[node name="pickUpSpawner" type="Node2D"]

[node name="pickUpSpawnPoints" type="Node2D" parent="."]
script = ExtResource("1_37j5r")

[node name="bulletSpawn" type="Marker2D" parent="pickUpSpawnPoints"]
position = Vector2(-60, 0)

[node name="bulletPickUpTimer" type="Timer" parent="pickUpSpawnPoints/bulletSpawn"]
wait_time = 20.0
one_shot = true

[node name="bulletPickup" parent="pickUpSpawnPoints/bulletSpawn" instance=ExtResource("2_0anvv")]

[node name="bouncerSpawn" type="Marker2D" parent="pickUpSpawnPoints"]

[node name="bouncerPickUpTimer" type="Timer" parent="pickUpSpawnPoints/bouncerSpawn"]
wait_time = 20.0
one_shot = true

[node name="bouncersPickup" parent="pickUpSpawnPoints/bouncerSpawn" instance=ExtResource("3_ha8fy")]

[node name="deathLaserSpawn" type="Marker2D" parent="pickUpSpawnPoints"]
position = Vector2(59, 0)

[node name="deathLaserPickupTimer" type="Timer" parent="pickUpSpawnPoints/deathLaserSpawn"]
wait_time = 20.0
one_shot = true

[node name="deathLasersPickup" parent="pickUpSpawnPoints/deathLaserSpawn" instance=ExtResource("4_50dyv")]

[connection signal="timeout" from="pickUpSpawnPoints/bulletSpawn/bulletPickUpTimer" to="pickUpSpawnPoints" method="_on_bullet_pick_up_timer_timeout"]
[connection signal="timeout" from="pickUpSpawnPoints/bouncerSpawn/bouncerPickUpTimer" to="pickUpSpawnPoints" method="_on_bouncer_pick_up_timer_timeout"]
[connection signal="timeout" from="pickUpSpawnPoints/deathLaserSpawn/deathLaserPickupTimer" to="pickUpSpawnPoints" method="_on_death_laser_pickup_timer_timeout"]
